fix(dikweb): hide richtext toolbar on mobile as it won't effective

--- a/dikweb/styles/richtextstyles.css
+++ b/dikweb/styles/richtextstyles.css
@@ -6,6 +6,12 @@
 	border: none !important;
 }
 
+@media only screen and (max-width: 600px) {
+	.Draftail-Toolbar {
+		display: none !important;
+	}
+}
+
 /* Override default */
 .Draftail-Editor,
 .Draftail-Editor--readonly,
